syntax = "proto3";

package auth;

option go_package = "./apis/grpc/fileserver/pb";


message UploadProfilePicReq {
	bytes data = 1;
    string user_id = 2;
    string file_type = 3;
}

message UploadProfilePicRes {
    int64 status = 1;
    string error = 2;
    string file_name = 3;
}

message GetProfilePicReq {
	string user_id = 1;
    string file_name = 2;
}

message GetProfilePicRes {
	bytes data = 1;
    string message = 2;
    string error = 3;
}

message DeleteProfilePicReq {
	string user_id = 1;
    string file_name = 2;
}

message DeleteProfilePicRes {
	string message = 1;
    int64 status = 2;
    string error = 3;
}

// FileService to upload files(images, text, videos, docs) of any type and size.
service FileService {
    // Lets an user upload profile pic into the file server
    rpc UploadProfilePic(stream UploadProfilePicReq) returns (UploadProfilePicRes) {};

    // Lets an user get profile pic into the file server
	rpc GetProfilePic(GetProfilePicReq) returns (stream GetProfilePicRes) {};

    // Lets a user delete the profile picture
    rpc DeleteProfilePic(DeleteProfilePicReq) returns (DeleteProfilePicRes) {};
}